# Chess-AI-Engine

./: .gitignore  README.md  pyproject.toml  requirements.txt  start_web.bat  start_web.ps1
chess_ai/: __init__.py  board_encoding.py  engine.py  evaluation.py  gui.py  model.py  play.py  search.py  tf_evaluation.py  tf_model.py  train_self_play.py  train_tensorflow_value_model.py  train_value_model.py
tests/: test_board_encoding.py  test_engine.py
web/: app.js  index.html  server.js  styles.css
